Se modificaron las etiquetas title mejorando el seo de la pagina, se crearon los textos con la ayuda de chat gpt

--- a/notas/nota-nascar2.html
+++ b/notas/nota-nascar2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overtime | Noticia</title>
+    <title>Overtime NASCAR | Victoria 400 del Joe Gibbs en Kansas</title>
     <meta name="description" content="¡Noticia destacada! El equipo Joe Gibbs Racing alcanza una histórica victoria número 400 en el emocionante circuito de Kansas. Descubre cómo el equipo logró esta increíble hazaña, superando a sus competidores en una carrera llena de acción y estrategia. Conoce los pilotos involucrados, las emociones en el podio y el impacto de esta victoria en el campeonato. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
