--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -14,7 +14,7 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Overtime NASCAR | Calendario</title>
+    <title>Overtime NASCAR | Calendario de la categoría</title>
     <meta name="description" content="Explora el emocionante calendario de la temporada de NASCAR en nuestro sitio web. Descubre las fechas clave de las carreras, los circuitos icónicos y los eventos destacados de la categoría. Sigue de cerca a tus pilotos favoritos mientras compiten en pistas legendarias y vive la intensidad de la velocidad en cada curva. ¡Planifica tu pasión por NASCAR con nuestro completo calendario!">
 </head>
 
