--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
-    <title>Overtime NASCAR | Pilotos</title>
+    <title>Overtime NASCAR | Pilotos destacados</title>
     <meta name="description" content="Explora nuestra sección exclusiva y descubre a todos los pilotos de la emocionante categoría de NASCAR. Obtén información detallada sobre cada uno de ellos, sus logros, equipos y perfiles destacados. Desde las leyendas consagradas hasta las nuevas promesas, sumérgete en el mundo de los pilotos y disfruta de la pasión por la velocidad en cada página. ¡Descubre a los protagonistas del automovilismo en nuestra plataforma!">
 </head>
 
