--- a/notas/nota-nascar1.html
+++ b/notas/nota-nascar1.html
@@ -7,7 +7,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overtime | Noticia</title>
+    <title>Overtime NASCAR | Darlington | Todos los detalles de la fecha</title>
     <meta name="description" content="¡Noticia exclusiva! Descubre todos los detalles de la emocionante carrera de NASCAR en el icónico circuito de Darlington. Conoce los momentos más destacados, las estrategias audaces y las sorpresas que se vivieron en esta competencia legendaria.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
