--- a/notas/nota-nascar3.html
+++ b/notas/nota-nascar3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Overtime | Noticia</title>
+    <title>Overtime NASCAR | Kansas 400 | Todos los detalles de la fecha</title>
     <meta name="description" content="¡Prepárate para la próxima carrera de NASCAR en el icónico óvalo de Kansas! Descubre todos los detalles sobre la emocionante competencia que se llevará a cabo este fin de semana. Conoce la fecha, el horario y los pilotos destacados que estarán presentes en esta intensa batalla por la victoria. Obtén información sobre la pista, las características del circuito y las expectativas para esta emocionante carrera en Kansas.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
