Se agrego la seccion ver noticias completas y se trabajo en el responsive del modo mobile

--- a/pages/ver-noticias-completas.html
+++ b/pages/ver-noticias-completas.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Overtime NASCAR | Las ultimas noticias completas</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
-    <title>Overtime NASCAR | Inicio | Pagina de noticias de NASCAR</title>
-    <meta name="description"
-        content="Overtime: Tu fuente confiable de noticias de NASCAR. Mantente al día con las últimas actualizaciones, resultados de carreras y análisis exhaustivos. Descubre los secretos detrás del volante y disfruta de contenido exclusivo para los fanáticos más apasionados. ¡Entra en la pista con Overtime y vive la emoción de la NASCAR como nunca antes!">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <meta name="description"
+        content="Bienvenido a nuestra sección de noticias completas. Aquí encontrarás las ultimas noticias actualizadas sobre NASCAR. Mantente al día con las últimas noticias de la categoria, las posiciones, las proximas fechas y los datos de los pilotos de la categoria. Nuestro equipo de redactores expertos trabaja arduamente para ofrecerte contenido relevante y de calidad. Explora nuestras noticias completas y mantente informado con todo lo que está sucediendo en el mundo NASCAR.">
 </head>
 
 <body>
     <header>
 
         <a href="../index.html" class="logo">
-            <img src="./imgs/logo.png" alt="Logo Overtime" loading="lazy">
+            <img src="../imgs/logo.png" alt="Logo Overtime" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md" data-bs-theme="dark">
@@ -41,16 +39,16 @@
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./pages/campeonato.html">Campeonato</a>
+                            <a class="nav-link active" href="./campeonato.html">Campeonato</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./pages/calendario.html">Calendario</a>
+                            <a class="nav-link active" href="./calendario.html">Calendario</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./pages/videos.html">Videos</a>
+                            <a class="nav-link active" href="./videos.html">Videos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./pages/pilotos.html">Pilotos</a>
+                            <a class="nav-link active" href="./pilotos.html">Pilotos</a>
                         </li>
                     </ul>
                 </div>
@@ -60,24 +58,6 @@
     </header>
 
     <main>
-
-        <!-- HERO -->
-
-
-        <section class="hero">
-            <div class="nascar-logo">
-                <img src="./imgs/nascar-logo.png" alt="Logo de Nascar" width="280px" loading="lazy">
-            </div>
-
-            <div class="video-container">
-                <video src="./videos/nascar.mp4" autoplay muted loop></video>
-            </div>
-        </section>
-
-        <div class="hr">
-            <hr>
-        </div>
-
         <!-- ==== ULTIMAS NOTICIAS ==== -->
 
         <h2>Ultimas Noticias</h2>
@@ -86,13 +66,13 @@
 
             <article class="noticia1">
 
-                <img src="./imgs/darlington.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
+                <img src="../imgs/darlington.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">Nascar: Hora de visitar a "La Dama de Negro"</h3>
                 <p class="parrafo">Este fin de semana NASCAR visitará Darlington en el marco de la 13ra fecha de la
                     temporada 2023.
                     Este fin de semana tendremos una fecha especial porque varios pilotos utilizarán diseños retro
                     homenajeando a otros pilotos o a ellos mismos. El ganador del año pasado fue Joey Logano</p>
-                <a href="./notas/nota-nascar1.html" class="ver-noticia-completa">Ver noticia completa</a>
+                <a href="../notas/nota-nascar1.html" class="ver-noticia-completa">Ver noticia completa</a>
 
 
             </article>
@@ -101,7 +81,7 @@
             <article class="noticia2">
 
 
-                <img src="./imgs/400.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
+                <img src="../imgs/400.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">Victoria 400 de Joe Gibbs Racing en NASCAR</h3>
                 <p class="parrafo">En una carrera marcada por las banderas amarillas, NASCAR visitó Kansas por la 12da
                     fecha de la
@@ -110,7 +90,7 @@
                     así su victoria N° 49 en la NASCAR Cup Series convirtiéndose en el piloto N° 15 en la historia
                     con
                     más triunfos, empatado con Tony Stewart</p>
-                <a href="./notas/nota-nascar2.html" class="ver-noticia-completa">Ver noticia completa</a>
+                <a href="../notas/nota-nascar2.html" class="ver-noticia-completa">Ver noticia completa</a>
 
 
             </article>
@@ -119,7 +99,7 @@
             <article class="noticia3">
 
 
-                <img src="./imgs/kansas.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
+                <img src="../imgs/kansas.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">NASCAR en Kansas: Toda la info de las 400</h3>
                 <p class="parrafo">La categoría estadounidense visitará este fin de semana el óvalo de Kansas en el
                     marco de la
@@ -129,14 +109,14 @@
                     Kansas,
                     el cual está presente en el campeonato de NASCAR desde 2001 y con una doble visita desde el año
                     2011.</p>
-                <a href="./notas/nota-nascar3.html" class="ver-noticia-completa">Ver noticia completa</a>
+                <a href="../notas/nota-nascar3.html" class="ver-noticia-completa">Ver noticia completa</a>
 
             </article>
 
 
             <article class="noticia4">
 
-                <img src="./imgs/truex.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
+                <img src="../imgs/truex.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">NASCAR: Victoria de Martin Truex Jr en la Milla Monstruo</h3>
                 <p class="parrafo">El piloto del Joe Gibbs Racing #19 ganó la Wurth 400 ayer en Dover International
                     Speedway y
@@ -144,145 +124,13 @@
                     encontrarse con la bandera de cuadros luego de 54 carreras.
                     Luego de que se posponga la carrera el domingo por lluvia, Martin Truex Jr (Toyota) pudo por fin
                     volver a ganar en The Monster Mile.</p>
-                <a href="./notas/nota-nascar4.html" class="ver-noticia-completa">Ver noticia completa</a>
+                <a href="../notas/nota-nascar4.html" class="ver-noticia-completa">Ver noticia completa</a>
 
             </article>
-
-        </section>
-        <div class="ver-completo-container">
-            <a href="./pages/ver-noticias-completas.html" class="ver-noticias-completas">Ver Noticias completas</a>
-        </div>
-
-        <div class="hr">
-            <hr>
-        </div>
-
-
-        <!-- ==== LIDERES DEL CAMPEONATO ==== -->
-
-        <h2>Lideres del Campeonato</h2>
-
-        <section class="lideres">
-
-            <div class="pos" data-aos="fade-up">
-                <img src="./imgs/ross.png" alt="Foto de Ross Chastain" class="img-container" loading="lazy">
-                <h3 class="nombre">Ross Chastain</h3>
-                <h4 class="pts">429 Puntos</h4>
-            </div>
-
-            <div class="pos" data-aos="fade-up">
-                <img src="./imgs/bell.png" alt="Foto de Christopher Bell" class="img-container" loading="lazy">
-                <h3 class="nombre">Cristopher Bell</h3>
-                <h4 class="pts">402 Puntos</h4>
-            </div>
-
-            <div class="pos" data-aos="fade-up">
-                <img src="./imgs/harvick.png" alt="Foto de Christopher Bell" class="img-container" loading="lazy">
-                <h3 class="nombre">Kevin Harvick</h3>
-                <h4 class="pts">400 Puntos</h4>
-            </div>
-
-        </section>
-
-        <div class="ver-completo-container" data-aos="zoom-in">
-            <a href="./pages/campeonato.html" class="ver-completo">Ver campeonato completo</a>
-        </div>
-
-        <div class="hr">
-            <hr>
-        </div>
-
-
-        <!-- ==== ULTIMOS VIDEOS ==== -->
-
-        <h2>Ultimos Videos</h2>
-
-        <section class="ultimos-videos">
-
-            <div class="vid-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/-M4TdRI0Rlw"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-
-
-            <div class="vid-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/GZ8lcOyeDBk"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-
-
-            <div class="vid-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/UYf0JK9p1fo"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-
-
-        </section>
-
-        <div class="ver-completo-container">
-            <a href="./pages/videos.html" class="ver-completo">Ver videos completos</a>
-        </div>
-
-        <div class="hr">
-            <hr>
-        </div>
-
-
-        <!-- ==== PROXIMAS CARRERAS -->
-
-        <h2>Proximas carreras</h2>
-
-        <section class="proximas-carreras">
-
-            <div class="carrera" data-aos="fade-up">
-
-                <img src="./imgs/charlotte.png" alt="Logo de Charlotte Motor Speedway" class="imgs" loading="lazy">
-                <h3 class="nombre">Charlotte Motor Speedway</h3>
-                <h4 class="fecha">Mayo 28</h4>
-
-            </div>
-
-            <div class="carrera" data-aos="fade-up">
-                <img src="./imgs/wwtraceway.png" alt="Logo de World Wide Technology Raceway" class="imgs"
-                    loading="lazy">
-                <h3 class="nombre">World Wide Technology Raceway</h3>
-                <h4 class="fecha">Junio 4</h4>
-
-            </div>
-
-            <div class="carrera" data-aos="fade-up">
-                <img src="./imgs/sonoma.png" alt="Logo de Sonoma Raceway" class="imgs" loading="lazy">
-                <h3 class="nombre">Sonoma Raceway</h3>
-                <h4 class="fecha">Junio 11</h4>
-
-            </div>
-
-            <div class="carrera" data-aos="fade-up">
-                <img src="./imgs/nashville.png" alt="Logo de Nashville Raceway" class="imgs" loading="lazy">
-                <h3 class="nombre">Nashville Raceway</h3>
-                <h4 class="fecha">Junio 25</h4>
-
-            </div>
-
-        </section>
-
-        <div class="ver-completo-container" data-aos="zoom-in">
-            <a href="./pages/calendario.html" class="ver-completo">Ver calendario completo</a>
-        </div>
-
-        <div class="hr">
-            <hr>
-        </div>
-
-
     </main>
-
+    <div class="hr">
+        <hr>
+    </div>
     <footer>
         <div class="footer-container">
             <div class="copy">
