--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <header>
 
-        <a href="../index.html" class="logo">
+        <a href="./index.html" class="logo">
             <img src="./imgs/logo.png" alt="Logo Overtime" loading="lazy">
         </a>
 
