Se agregaron los meta description para facebook, twitter y linkedin. Texto formulado con ChatGPT.

--- a/notas/nota-nascar3.html
+++ b/notas/nota-nascar3.html
@@ -15,6 +15,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Kansas | Todos los detalles de la fecha</title>
+    <meta name="title" content="Overtime | NASCAR | Kansas | Todos los detalles de la fecha" />
+    <meta name="description"
+        content="Disfruta del resumen de la fecha de NASCAR en Kansas en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Kansas | Todos los detalles de la fecha" />
+    <meta property="og:description"
+        content="Disfruta del resumen de la fecha de NASCAR en Kansas en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Kansas | Todos los detalles de la fecha" />
+    <meta property="twitter:description"
+        content="Disfruta del resumen de la fecha de NASCAR en Kansas en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
