--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime NASCAR | Campeonato de la categoria</title>
-    <meta name="description" content="Descubre el emocionante campeonato de la temporada de NASCAR en nuestro sitio web. Sigue de cerca la clasificación actualizada de los pilotos y equipos líderes en la lucha por el título. Conoce quiénes se destacan en cada carrera, quiénes están en la cima de la tabla y quiénes están pisando fuerte para convertirse en campeones. ¡Sumérgete en la intensidad del campeonato de NASCAR con nosotros!">
+    <meta name="description"
+        content="Descubre el emocionante campeonato de la temporada de NASCAR en nuestro sitio web. Sigue de cerca la clasificación actualizada de los pilotos y equipos líderes en la lucha por el título. Conoce quiénes se destacan en cada carrera, quiénes están en la cima de la tabla y quiénes están pisando fuerte para convertirse en campeones. ¡Sumérgete en la intensidad del campeonato de NASCAR con nosotros!">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
@@ -16,6 +17,29 @@
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Campeonato</title>
+    <meta name="title" content="Overtime | NASCAR | Campeonato" />
+    <meta name="description"
+        content="Descubri el campeonato de la temporada NASCAR en nuestra web. Conoce las posiciones de los lideres y unite a nuestra comunidad #NASCAR." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Campeonato" />
+    <meta property="og:description"
+        content="Descubri el campeonato de la temporada NASCAR en nuestra web. Conoce las posiciones de los lideres y unite a nuestra comunidad #NASCAR." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Campeonato" />
+    <meta property="twitter:description"
+        content="Descubri el campeonato de la temporada NASCAR en nuestra web. Conoce las posiciones de los lideres y unite a nuestra comunidad #NASCAR." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -25,7 +49,7 @@
             <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
-        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -82,203 +106,203 @@
                     <tr>
                         <td>2</td>
                         <td>20</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Cristopher Bell</td>
                         <td>402pts</td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>4</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Kevin Harvick</td>
                         <td>400pts</td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>19</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Martin Truex Jr</td>
                         <td>396pts</td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>24</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>William Byron</td>
                         <td>392pts</td>
                     </tr>
                     <tr>
                         <td>6</td>
                         <td>12</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Ryan Blaney</td>
                         <td>392pts</td>
                     </tr>
                     <tr>
                         <td>7</td>
                         <td>8</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Kyle Busch</td>
                         <td>389pts</td>
                     </tr>
                     <tr>
                         <td>8</td>
                         <td>11</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Denny Hamlin</td>
                         <td>388pts</td>
                     </tr>
                     <tr>
                         <td>9</td>
                         <td>22</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Joey Logano</td>
                         <td>380pts</td>
                     </tr>
                     <tr>
                         <td>10</td>
                         <td>5</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Kyle Larson</td>
                         <td>376pts</td>
                     </tr>
                     <tr>
                         <td>11</td>
                         <td>17</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Chris Buescher</td>
                         <td>374pts</td>
                     </tr>
                     <tr>
                         <td>12</td>
                         <td>6</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Brad Keselowski</td>
                         <td>368pts</td>
                     </tr>
                     <tr>
                         <td>13</td>
                         <td>45</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Tyler Reddick</td>
                         <td>362pts</td>
                     </tr>
                     <tr>
                         <td>14</td>
                         <td>47</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Ricky Stenhouse Jr</td>
                         <td>358pts</td>
                     </tr>
                     <tr>
                         <td>15</td>
                         <td>23</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Bubba Wallace</td>
                         <td>354pts</td>
                     </tr>
                     <tr>
                         <td>16</td>
                         <td>48</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Alex Bowman</td>
                         <td>331pts</td>
                     </tr>
                     <tr>
                         <td>17</td>
                         <td>99</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Daniel Suarez</td>
                         <td>328pts</td>
                     </tr>
                     <tr>
                         <td>18</td>
                         <td>54</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla" alt="Logo de Toyota" loading="lazy"></td>
                         <td>Ty Gibbs</td>
                         <td>320pts</td>
                     </tr>
                     <tr>
                         <td>19</td>
                         <td>34</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Michael MCDowell</td>
                         <td>317pts</td>
                     </tr>
                     <tr>
                         <td>20</td>
                         <td>16</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>AJ Allmendinger</td>
                         <td>298pts</td>
                     </tr>
                     <tr>
                         <td>21</td>
                         <td>2</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Austin Cindric</td>
                         <td>292pts</td>
                     </tr>
                     <tr>
                         <td>22</td>
                         <td>7</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Corey Lajoie</td>
                         <td>291pts</td>
                     </tr>
                     <tr>
                         <td>23</td>
                         <td>31</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Justin Haley</td>
                         <td>284pts</td>
                     </tr>
                     <tr>
                         <td>24</td>
                         <td>51</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Todd Gililand</td>
                         <td>279pts</td>
                     </tr>
                     <tr>
                         <td>25</td>
                         <td>41</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Ryan Preece</td>
                         <td>269pts</td>
                     </tr>
                     <tr>
                         <td>26</td>
                         <td>10</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Eric Almirola</td>
                         <td>260pts</td>
                     </tr>
                     <tr>
                         <td>27</td>
                         <td>9</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Chase Elliott</td>
                         <td>247pts</td>
                     </tr>
                     <tr>
                         <td>28</td>
                         <td>3</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Austin Dillon</td>
                         <td>223pts</td>
                     </tr>
                     <tr>
                         <td>29</td>
                         <td>21</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla" alt="Logo de Ford" loading="lazy"></td>
                         <td>Harrison Burton</td>
                         <td>219pts</td>
                     </tr>
                     <tr>
                         <td>30</td>
                         <td>43</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla" alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Erik Jones</td>
                         <td>190pts</td>
                     </tr>
@@ -289,7 +313,7 @@
         <div class="hr">
             <hr>
         </div>
-        
+
 
         <footer>
             <div class="footer-container">
@@ -328,8 +352,8 @@
         </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
