--- a/pages/ver-noticias-completas.html
+++ b/pages/ver-noticias-completas.html
@@ -17,7 +17,30 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <meta name="description"
         content="Bienvenido a nuestra sección de noticias completas. Aquí encontrarás las ultimas noticias actualizadas sobre NASCAR. Mantente al día con las últimas noticias de la categoria, las posiciones, las proximas fechas y los datos de los pilotos de la categoria. Nuestro equipo de redactores expertos trabaja arduamente para ofrecerte contenido relevante y de calidad. Explora nuestras noticias completas y mantente informado con todo lo que está sucediendo en el mundo NASCAR.">
-</head>
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR Noticias</title>
+    <meta name="title" content="Overtime | NASCAR Noticias" />
+    <meta name="description"
+        content="Tu web de noticias NASCAR. Sentí la pasión de las carreras en cada nota. Sumate a nuestra comunidad y viví la emoción de las carreras con nosotros." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR Noticias" />
+    <meta property="og:description"
+        content="Tu web de noticias NASCAR. Sentí la pasión de las carreras en cada nota. Sumate a nuestra comunidad y viví la emoción de las carreras con nosotros." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR Noticias" />
+    <meta property="twitter:description"
+        content="Tu web de noticias NASCAR. Sentí la pasión de las carreras en cada nota. Sumate a nuestra comunidad y viví la emoción de las carreras con nosotros." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+    </head>
 
 <body>
     <header>
