--- a/notas/nota-nascar1.html
+++ b/notas/nota-nascar1.html
@@ -8,7 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime NASCAR | Darlington | Todos los detalles de la fecha</title>
-    <meta name="description" content="¡Noticia exclusiva! Descubre todos los detalles de la emocionante carrera de NASCAR en el icónico circuito de Darlington. Conoce los momentos más destacados, las estrategias audaces y las sorpresas que se vivieron en esta competencia legendaria.">
+    <meta name="description"
+        content="¡Noticia exclusiva! Descubre todos los detalles de la emocionante carrera de NASCAR en el icónico circuito de Darlington. Conoce los momentos más destacados, las estrategias audaces y las sorpresas que se vivieron en esta competencia legendaria.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -18,6 +19,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Darlington | Todos los detalles de la fecha</title>
+    <meta name="title" content="Overtime | NASCAR | Darlington | Todos los detalles de la fecha" />
+    <meta name="description"
+        content="Disfruta del resumen de la fecha de NASCAR en Darlington en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Darlington | Todos los detalles de la fecha" />
+    <meta property="og:description"
+        content="Disfruta del resumen de la fecha de NASCAR en Darlington en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Darlington | Todos los detalles de la fecha" />
+    <meta property="twitter:description"
+        content="Disfruta del resumen de la fecha de NASCAR en Darlington en nuestra web. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -27,7 +51,7 @@
             <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
-        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -80,7 +104,8 @@
                         23° en las curvas 3 & 4, 3° en la recta principal y 2° en la recta posterior.
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/darlington2.jpg" alt="Joey Logano festejando la victoria en Darlington" loading="lazy">
+                        <img src="../imgs/darlington2.jpg" alt="Joey Logano festejando la victoria en Darlington"
+                            loading="lazy">
                     </div>
                     <p>La carrera de la NASCAR Cup Series tendrá una distancia de 400 millas, pactada a 293 giros con
                         tres etapas de 90, 95 y 108 vueltas. <br><br>
@@ -93,10 +118,11 @@
                         stages de 45, 45 y 57 giros. El ganador del año pasado fue Justin Allgaier a bordo del Chevrolet
                         Camaro #7 del JR Motorsports <br><br> </p>
 
-                        <div class="image-container">
-                            <img src="../imgs/darlington3.jpg" alt="Victorias en Darlington de las categorias Trucks y Xfinity" loading="lazy">
-                        </div>
-                        <p> Los horarios para estas carreras serán: <br><br>
+                    <div class="image-container">
+                        <img src="../imgs/darlington3.jpg"
+                            alt="Victorias en Darlington de las categorias Trucks y Xfinity" loading="lazy">
+                    </div>
+                    <p> Los horarios para estas carreras serán: <br><br>
 
 
                         Viernes: <br><br>
@@ -138,8 +164,8 @@
     <div class="hr">
         <hr>
     </div>
-    
-    
+
+
     <footer>
         <div class="footer-container">
             <div class="copy">
@@ -176,8 +202,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 
