--- a/notas/nota-nascar2.html
+++ b/notas/nota-nascar2.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime NASCAR | Victoria 400 del Joe Gibbs en Kansas</title>
-    <meta name="description" content="¡Noticia destacada! El equipo Joe Gibbs Racing alcanza una histórica victoria número 400 en el emocionante circuito de Kansas. Descubre cómo el equipo logró esta increíble hazaña, superando a sus competidores en una carrera llena de acción y estrategia. Conoce los pilotos involucrados, las emociones en el podio y el impacto de esta victoria en el campeonato. ">
+    <meta name="description"
+        content="¡Noticia destacada! El equipo Joe Gibbs Racing alcanza una histórica victoria número 400 en el emocionante circuito de Kansas. Descubre cómo el equipo logró esta increíble hazaña, superando a sus competidores en una carrera llena de acción y estrategia. Conoce los pilotos involucrados, las emociones en el podio y el impacto de esta victoria en el campeonato. ">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -15,6 +16,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Kansas | Victoria 400 del Joe Gibbs Racing</title>
+    <meta name="title" content="Overtime | NASCAR | Kansas | Victoria 400 del Joe Gibbs Racing" />
+    <meta name="description"
+        content="Conoce los detalles de la victoria 400 del Joe Gibbs Racing en Kansas. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Kansas | Victoria 400 del Joe Gibbs Racing" />
+    <meta property="og:description"
+        content="Conoce los detalles de la victoria 400 del Joe Gibbs Racing en Kansas. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Kansas | Victoria 400 del Joe Gibbs Racing" />
+    <meta property="twitter:description"
+        content="Conoce los detalles de la victoria 400 del Joe Gibbs Racing en Kansas. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -23,7 +47,7 @@
             <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
-        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -75,7 +99,7 @@
                         amarillas en la carrera.
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/400-2.jpg" alt="Auto de Denny Hamlin festejando la victoria" loading="lazy"> 
+                        <img src="../imgs/400-2.jpg" alt="Auto de Denny Hamlin festejando la victoria" loading="lazy">
                     </div>
                     <p>De las 11 amarillas, dos fueron por la finalización de etapas, la primera ganada por Denny Hamlin
                         #11 con un dominio total de Toyota que colocó sus 6 autos en el top 7. La etapa 2 fue ganada por
@@ -115,7 +139,7 @@
     <div class="hr">
         <hr>
     </div>
-    
+
 
     <footer>
         <div class="footer-container">
@@ -153,8 +177,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 
