--- a/notas/nota-nascar4.html
+++ b/notas/nota-nascar4.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Overtime NASCAR | Triunfo de Martin Truex Jr. en Dover</title>
-    <meta name="description" content="¡Noticia destacada! Martin Truex Jr conquista la Milla Monstruo en una increíble actuación en el Dover International Speedway. Descubre cómo Truex Jr superó a sus competidores en este desafiante óvalo, logrando una victoria dominante. Conoce los momentos más emocionantes de la carrera, las estrategias clave y la reacción de Truex Jr al cruzar la línea de meta.">
+    <meta name="description"
+        content="¡Noticia destacada! Martin Truex Jr conquista la Milla Monstruo en una increíble actuación en el Dover International Speedway. Descubre cómo Truex Jr superó a sus competidores en este desafiante óvalo, logrando una victoria dominante. Conoce los momentos más emocionantes de la carrera, las estrategias clave y la reacción de Truex Jr al cruzar la línea de meta.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
@@ -15,6 +16,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Dover | Triunfo de Martin Truex Jr.</title>
+    <meta name="title" content="Overtime | NASCAR | Dover | Triunfo de Martin Truex Jr." />
+    <meta name="description"
+        content="Conoce los detalles de la victoria de Martin Truex Jr. en Dover. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Dover | Triunfo de Martin Truex Jr." />
+    <meta property="og:description"
+        content="Conoce los detalles de la victoria de Martin Truex Jr. en Dover. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Dover | Triunfo de Martin Truex Jr." />
+    <meta property="twitter:description"
+        content="Conoce los detalles de la victoria de Martin Truex Jr. en Dover. Revivi los momentos más emocionantes de la carrera. Unite a nuestra comunidad #NASCAR." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -23,7 +47,7 @@
             <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
-        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -105,7 +129,7 @@
     <div class="hr">
         <hr>
     </div>
-    
+
 
     <footer>
         <div class="footer-container">
@@ -143,8 +167,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
