--- a/pages/videos.html
+++ b/pages/videos.html
@@ -14,7 +14,31 @@
     <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Overtime NASCAR | Videos | Revive los momentos en pista</title>
-    <meta name="description" content="Sumérgete en el emocionante mundo de la categoría de NASCAR a través de nuestra amplia colección de videos. Disfruta de las mejores carreras, momentos destacados y entrevistas exclusivas con los pilotos más destacados. Desde emocionantes adelantamientos hasta victorias históricas, nuestros videos te transportarán a la adrenalina de la pista. ¡No te pierdas ni un solo detalle y vive la pasión por NASCAR en cada reproducción!">
+    <meta name="description"
+        content="Sumérgete en el emocionante mundo de la categoría de NASCAR a través de nuestra amplia colección de videos. Disfruta de las mejores carreras, momentos destacados y entrevistas exclusivas con los pilotos más destacados. Desde emocionantes adelantamientos hasta victorias históricas, nuestros videos te transportarán a la adrenalina de la pista. ¡No te pierdas ni un solo detalle y vive la pasión por NASCAR en cada reproducción!">
+    <!-- Primary Meta Tags -->
+    <title>Overtime | NASCAR | Videos</title>
+    <meta name="title" content="Overtime | NASCAR | Videos" />
+    <meta name="description"
+        content="Explora nuestra galería de videos en la web, llena de momentos #NASCAR. Unite a nuestra comunidad y enterate de todas las noticias de la categoria." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io" />
+    <meta property="og:title" content="Overtime | NASCAR | Videos" />
+    <meta property="og:description"
+        content="Explora nuestra galería de videos en la web, llena de momentos #NASCAR. Unite a nuestra comunidad y enterate de todas las noticias de la categoria." />
+    <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io" />
+    <meta property="twitter:title" content="Overtime | NASCAR | Videos" />
+    <meta property="twitter:description"
+        content="Explora nuestra galería de videos en la web, llena de momentos #NASCAR. Unite a nuestra comunidad y enterate de todas las noticias de la categoria." />
+    <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 
 <body>
@@ -23,7 +47,7 @@
             <img src="../imgs/logo.png" alt="Logo Overtime">
         </a>
 
-        <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
+        <nav class="navbar navbar-expand-md" data-bs-theme="dark">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -105,11 +129,11 @@
 
         </section>
     </main>
-    
+
     <div class="hr">
         <hr>
     </div>
-    
+
 
     <footer>
         <div class="footer-container">
@@ -147,8 +171,8 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
