Se agregaron los H1 que faltaban a cada html, respetando que se cumpla el orden de los elementos H, h1, h2, h3, etc.

--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -79,7 +79,8 @@
     </header>
     <main>
 
-        <h2>Calendario</h2>
+        <h1>Calendario</h1>
+        <h2>NASCAR</h2>
         <section class="proximas-carreras">
 
             <div class="carrera">
