--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -78,7 +78,8 @@
     </header>
     <main>
 
-        <h2>Pilotos</h2>
+        <h1>Pilotos</h1>
+        <h2>NASCAR</h2>
         <section class="pilotos">
             <div class="pilotos-container">
 
