--- a/pages/ver-noticias-completas.html
+++ b/pages/ver-noticias-completas.html
@@ -83,7 +83,8 @@
     <main>
         <!-- ==== ULTIMAS NOTICIAS ==== -->
 
-        <h2>Ultimas Noticias</h2>
+        <h1>Ultimas Noticias</h1>
+        <h2>NASCAR</h2>
 
         <section id="noticias">
 
